# tomd-cli

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  draft.md  pyproject.toml
.claude/: settings.local.json
.claude/skills/release/: SKILL.md
.github/workflows/: publish.yml
src/tomd/: __init__.py  cli.py  converter.py  images.py  office.py  pdf.py
tests/: test_cli.py  test_converter.py
