[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tomd-cli"
version = "0.1.4"
description = "Convert Office files (.docx, .pptx, .xlsx, .pdf) to Markdown using MarkItDown"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kohki Nakamura" },
]
keywords = ["markdown", "docx", "pptx", "xlsx", "pdf", "converter"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup :: Markdown",
]
dependencies = [
    "markitdown>=0.0.2",
    "pdfplumber>=0.11",
]

[project.scripts]
tomd = "tomd.cli:main"

[project.urls]
Homepage = "https://github.com/nakamurakohki/tomd-cli"
Repository = "https://github.com/nakamurakohki/tomd-cli"
Issues = "https://github.com/nakamurakohki/tomd-cli/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tomd"]

[tool.pytest.ini_options]
testpaths = ["tests"]
